Update image rotation time
Changed from 5 secs to 10 mins

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     document.body.style.backgroundImage = "url('" + images[randomNumber] + "')";
   }
 
-  // Change image every 5 seconds (5000 milliseconds)
-  setInterval(changeBackgroundImage, 5000);
+  // Change image every 10 mins (600000 milliseconds)
+  setInterval(changeBackgroundImage, 600000);
 
   // Initial image load
   changeBackgroundImage(); 
