Load image first

--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
     document.body.style.backgroundImage = "url('" + images[randomNumber] + "')";
   }
 
+   // Initial image load
+    changeBackgroundImage()
   // Change image every 10 mins (600000 milliseconds)
-  setInterval(changeBackgroundImage, 600000);
-
-  // Initial image load
-  changeBackgroundImage(); 
+  setInterval(changeBackgroundImage, 600000); 
 </script>
     <title>New tab</title>
   </head>
