--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     "images/image1.png",
     "images/image2.png",
     "images/image3.png",
+    "images/image4.png",
     // ... add more image paths
   ];
 
@@ -20,7 +21,7 @@
   }
 
    // Initial image load
-    changeBackgroundImage()
+    changeBackgroundImage();
   // Change image every 10 mins (600000 milliseconds)
   setInterval(changeBackgroundImage, 600000); 
 </script>
