--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     "images/image2.png",
     "images/image3.png",
     "images/image4.png",
+    "images/image5.png",
+    "images/image6.png",    
     // ... add more image paths
   ];
 
