Added Cowboy Bebop gif

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   </head>
   <body>
     <div class="surface">
+      <img src="https://i.gifer.com/1kaG.gif" alt="" />
       <main>
         <h1>Yet another generic startpage</h1>
         <div id="searchbar">
